--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@ Header("HTTP/1.1 404 Not Found");
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kulob Service</title>
+  <title>Kulob Service - Page not found</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="restaurant in kulob, Kulob Service, Kulob, Kulob city, Tajikistan, Khatlon" name="keywords">
+  <meta content="Kulob Service, Kulob, Kulob city, Tajikistan, Khatlon" name="keywords">
   <meta content="" name="description">
 
   <!-- Favicons -->
@@ -38,7 +38,6 @@ background-color:gray;
   <!-- =======================================================
     Name: Kulob Service
     URL: https://kulob-service.github.io
-    Author: MP Company & Regna
     All rights reserved!
   ======================================================= -->
 </head>
@@ -52,7 +51,7 @@ background-color:gray;
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#hero">Kulob Service</a></h1>
+        <h1><a href="#">Kulob Service</a></h1>
       </div>
 
       <nav id="nav-menu-container">
@@ -61,7 +60,7 @@ background-color:gray;
           <li><a href="hotel.html">Hotel</a></li>
           <li><a href="resta.html">Restaurant</a></li>
           <li><a href="sight.html">Sight</a></li>
-          <li><a href="mp_company.html">MP Conpany</a></li>  
+          <li><a href="authors.html">Authors</a></li>  
 
 
               
@@ -79,11 +78,11 @@ background-color:gray;
          <div align="center">
 		 
 		 
-		 <h1>Error 404</h1>
-		 <p>Entered address was invalid!<br>Please check out the accuracy of address and try to enter again.<br>We recommend you to go back to <a href="index.html">main page</a></p>
-		 <br><br>
-		 <h1>Хатогии 404</h1>
-		 <p>Суроғаи воридшуда вуҷуд надорад!<br> Аз шумо хоҳиш мекунем, то ки суроғаи воридшударо аз назар гузаронида дубора ворид намоед.<br>Ба шумо тавсия медиҳем ки ба <a href="indextj.html">саҳифаи асоси</a> баргардед.</p>
+		 <h1>Error 404 <img src="img/notfound.png" width="70" height="50"></h1>
+		 <p><b>The page is not found or was deleted!</b><br> Please check out the accuracy of address and retry again.<br>We recommend you to go back to <a href="index.html">main page</a></p>
+		 <br><hr><br>
+		 <h1>Хатогии 404 <img src="img/notfound.png" width="70" height="50"></h1>
+		 <p><b>Саҳифаи воридшуда ёфта нашуд ва ё аз истифода гирифта шудааст!</b><br> Аз шумо хоҳиш мекунем, то ки дурустии суроғаро аз назар гузаронида дубора такрор кунед.<br>Ба шумо тавсия медиҳем, ки ба <a href="indextj.html">саҳифаи асосӣ</a> баргардед.</p>
 		 </div>
   
   </main>
