--- a/authors.html
+++ b/authors.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kulob Service</title>
+  <title>Kulob Service - Authors</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="mp company, Kulob Service, Kulob, Kulob city, Tajikistan, Khatlon" name="keywords">
+  <meta content="Kulob Service, Kulob, Kulob city, Tajikistan, Khatlon" name="keywords">
   <meta content="" name="description">
 
   <!-- Favicons -->
@@ -48,7 +48,6 @@ background-color:silver;
   <!-- =======================================================
     Name: Kulob Service
     URL: https://kulob-service.github.io
-    Author: MP Company & Regna
     All rights reserved!
   ======================================================= -->
 </head>
@@ -71,14 +70,14 @@ background-color:silver;
           <li><a href="hotel.html">Hotel</a></li>
           <li><a href="resta.html">Restaurant</a></li>
           <li><a href="sight.html">Sight</a></li>
-          <li class="menu-active"><a href="mp_company.html">MP Conpany</a></li>
+          <li class="menu-active"><a href="authors.html">Authors</a></li>
 
 
 
-              <li class="menu-has-children"><a href="#">Language</a>
+              <li class="menu-has-children"><a href="#">ENG</a>
                 <ul>
                   <li id="eng"><a href="#">English</a></li>
-                  <li><a href="#">Тоҷикӣ</a></li>
+                  <li><a href="authorstj.html">Тоҷикӣ</a></li>
                 </ul>
               </li>
               </ul>
@@ -96,30 +95,28 @@ background-color:silver;
 
 
         <header>
-            <h1 align="center">MP Company</h1>
+            <h1 align="center">Let's trip together!</h1>
         </header>
 
-        <footer align="center">
-                <h2><a href="#">Let's trip together!</a></h2>
-        </footer>
+        
         <article align="center">
-            <p>We are an IT company that mainly work with websites. We work certanly for the progression of country tourism sphere.<br>
-            Publishing hotels and restaurants is free. The company is developing. It belongs to mr. <b>Alimov Kamoliddin</b> - student<br>
-            of "<b>Lyceum for gifted students</b>" in <b>Bokhtar city</b>. We will update information and add new ones as soon as we can.</p>
+            <p>All services in the website is free.  We will update information and add new ones as soon as we can.<br>
+             The website belongs to <b>Hamdamov Bobomurod</b>,<b>Rajabalizoda Bobojon</b> and <b>Sharipov Sobir</b> - students<br>
+            of "<b>Lyceum for gifted students</b>" in <b>Bokhtar city</b>. We are a friendly team. We work purely for the progression of country tourism sphere.</p>
 
 		</article>
                <br>
 
 		<article align="center">
 
-        <p><b>Note:</b> We want you to be contact us for...<br>
+        <p><b>Note:</b> We want you to be in contact us for...<br>
         * Publish or update your hotel, reataurant information   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
         * Publish your announcements  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;                              <br>
         * Tell us about website mistakes(technical, grammatical & wrong information)      <br>
-        * etc...    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;                                                     <br>
+        * and etc...    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;                                                     <br>
         </p>
 
-                    <h3>Contact us!</h3>
+                    <br>
                 <table cellpadding="4" align="center">
                 <tr>
                 <td><h4>Tel:</h4></td>   <td></td>
