--- a/guest1.html
+++ b/guest1.html
@@ -44,9 +44,8 @@ background-color:silver;
 
   </style>
   <!-- =======================================================
-    Theme Name: Kulob Service
+    Name: Kulob Service
     URL: https://kulob-service.github.io
-    Author: MP Company & Regna
     All rights reserved!
   ======================================================= -->
 </head>
@@ -69,14 +68,14 @@ background-color:silver;
           <li class="menu-active"><a href="hotel.html">Hotel</a></li>
           <li><a href="resta.html">Restaurant</a></li>
           <li><a href="sight.html">Sight</a></li>
-          <li><a href="mp_company.html">MP Conpany</a></li> 
+          <li><a href="authors.html">Authors</a></li> 
 
 
 
-              <li class="menu-has-children"><a href="#">Language</a>
+              <li class="menu-has-children"><a href="#">ENG</a>
                 <ul>
                   <li id="eng"><a href="#">English</a></li>
-                  <li><a href="#">Тоҷикӣ</a></li>
+                  <li><a href="guest1tj.html">Тоҷикӣ</a></li>
                 </ul>  </li>
         </ul>
       </nav><!-- #nav-menu-container -->
