--- a/hotel.html
+++ b/hotel.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kulob Service</title>
+  <title>Kulob Service - Hotels</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Kulob Service, Kulob, hotel in Kulob, Kulob city, Tajikistan" name="keywords">
   <meta content="" name="description">
@@ -35,7 +35,6 @@ background-color:gray;
   <!-- =======================================================
     Theme Name: Kulob Service
     URL: https://kulob-service.github.io
-    Author: MP Company & Regna
     All rights reserved!
   ======================================================= -->
 </head>
@@ -58,9 +57,9 @@ background-color:gray;
           <li class="menu-active"><a href="hotel.html">Hotel</a></li>
           <li><a href="resta.html">Restaurant</a></li>
           <li><a href="sight.html">Sight</a></li>
-          <li><a href="mp_company.html">MP Conpany</a></li>
+          <li><a href="authors.html">Authors</a></li>
 
-              <li class="menu-has-children"><a href="#">Language</a>
+              <li class="menu-has-children"><a href="#">ENG</a>
                 <ul>
                   <li id="eng"><a href="#">English</a></li>
                   <li><a href="hoteltj.html">Тоҷикӣ</a></li>
@@ -176,25 +175,7 @@ background-color:gray;
 
       </div>
     </section><!-- #portfolio -->
-              <!--==========================
-      About Us Section
-    ============================-->
-    <section id="about">
-      <div class="container">
-        <div class="row about-container">
-
-          <div class="col-lg-6 content order-lg-1 order-2">
-            <h2 class="title">Let's find the best hotel.</h2>
-            <p>
-              This site is the best for finding hotel. Prices and pictures are present, so you can choose the best one which you want.
-            </p>
-          </div>
-
-          <div class="col-lg-6 background order-lg-2 order-1 wow fadeInRight"></div>
-        </div>
-
-      </div>
-    </section><!-- #about -->
+              
 
     
   </main>
