--- a/hoteltj.html
+++ b/hoteltj.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kulob Service</title>
+  <title>КӮЛОБ СЕРВИС - Меҳмонхонаҳо</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Kulob Service, Kulob, hotel in Kulob, Kulob city, Tajikistan" name="keywords">
   <meta content="" name="description">
@@ -49,7 +49,7 @@ background-color:gray;
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#">Kulob Service</a></h1>
+        <h1><a href="#">КӮЛОБ СЕРВИС</a></h1>
       </div>
 
       <nav id="nav-menu-container">
@@ -58,12 +58,12 @@ background-color:gray;
           <li class="menu-active"><a href="hoteltj.html">Меҳмонхона</a></li>
           <li><a href="restatj.html">Чойхона</a></li>
           <li><a href="sighttj.html">Ҷойҳои тамошобоб</a></li>
-          <li><a href="mp_company.html">MP Conpany</a></li>
+          <li><a href="authorstj.html">Муаллифон</a></li>
 
-              <li class="menu-has-children"><a href="#">Забон</a>
+              <li class="menu-has-children"><a href="#">ТҶ</a>
                 <ul>
-                  <li><a href="hotel.html">English</a></li>
                   <li id="eng"><a href="#">Тоҷикӣ</a></li>
+                  <li><a href="hotel.html">English</a></li>
                 </ul>
               </li>
               </ul>
@@ -101,7 +101,7 @@ background-color:gray;
 
         <div class="row" id="portfolio-wrapper">
           <div class="col-lg-3 col-md-6 portfolio-item filter-hotel">
-            <a href="hotel1.html">
+            <a href="hotel1tj.html">
               <img src="img/portfolio/hotel1.jpg" alt="">
               <div class="details">
                 <h4>Меҳмонхонаи Помир</h4>
@@ -112,7 +112,7 @@ background-color:gray;
 
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-hotel">
-            <a href="hotel2.html">
+            <a href="hotel2tj.html">
               <img src="img/portfolio/hotel2.jpg" alt="">
               <div class="details">
                 <h4>Меҳмонхонаи Махсус</h4>
@@ -122,7 +122,7 @@ background-color:gray;
           </div>  
          
          <div class="col-lg-3 col-md-6 portfolio-item filter-hotel">
-            <a href="hotel3.html">
+            <a href="hotel3tj.html">
               <img src="img/portfolio/hotel3.jpg" alt="">
               <div class="details">
                 <h4>Меҳмонхонаи Хатлон</h4>
@@ -132,7 +132,7 @@ background-color:gray;
           </div>            
             
           <div class="col-lg-3 col-md-6 portfolio-item filter-hotel">
-            <a href="hotel4.html">
+            <a href="hotel4tj.html">
               <img src="img/portfolio/hotel4.jpg" alt="">
               <div class="details">
                 <h4>Меҳмонхонаи Бобоҷон</h4>
@@ -142,7 +142,7 @@ background-color:gray;
           </div> 
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-guest">
-            <a href="guest1.html">
+            <a href="guest1tj.html">
               <img src="img/portfolio/guest1.jpg" alt="">
               <div class="details">
                 <h4>Гестхаус MMK-ATAC</h4>
@@ -152,7 +152,7 @@ background-color:gray;
           </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-hotel">
-            <a href="hotel6.html">
+            <a href="hotel6tj.html">
               <img src="img/portfolio/hotel6.jpg" alt="">
               <div class="details">
                 <h4>Меҳмонхонаи Дорро</h4>
@@ -163,7 +163,7 @@ background-color:gray;
 
 
            <div class="col-lg-3 col-md-6 portfolio-item filter-hotel">
-            <a href="hotel5.html">
+            <a href="hotel5tj.html">
               <img src="img/portfolio/hotel5.jpg" alt="">
               <div class="details">
                 <h4>Меҳмонхонаи Кӯлоб</h4>
