--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@ background-color:silver;
   <!-- =======================================================
     Theme Name: Kulob Service
     Theme URL: https://kulob-service.github.io
-    Author: MP Company
     All rights reserved!
   ======================================================= -->
 </head>
@@ -54,10 +53,10 @@ background-color:silver;
           <li><a href="hotel.html">Hotel</a></li>
           <li><a href="resta.html">Restaurant</a></li>
           <li><a href="sight.html">Sight</a></li>
-          <li><a href="mp_company.html">MP Conpany</a></li>
+          <li><a href="authors.html">Authors</a></li>
 
 
-              <li class="menu-has-children"><a href="#">Language</a>
+              <li class="menu-has-children"><a href="#">ENG</a>
                 <ul>
                   <li id="eng"><a href="#">English</a></li>
                   <li><a href="indextj.html">Тоҷикӣ</a></li>
@@ -198,7 +197,7 @@ background-color:silver;
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="box">
            <!--   <div class="icon"><a href=""><i class="fa fa-photo"></i></a></div>-->
-           <br>   <h4 class="title"><a href="mp_company.html">MP Company</a></h4>
+           <br>   <h4 class="title"><a href="authors.html">Authors</a></h4>
               <!--<p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>-->
             </div>
           </div>
