--- a/restatj.html
+++ b/restatj.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kulob Service</title>
+  <title>>КӮЛОБ СЕРВИС - Чойхонаҳо</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="restaurant in kulob, Kulob Service, Kulob, Kulob city, Tajikistan, Khatlon" name="keywords">
   <meta content="" name="description">
@@ -35,7 +35,6 @@ background-color:gray;
   <!-- =======================================================
     Name: Kulob Service
     URL: https://kulob-service.github.io
-    Author: MP Company & Regna
     All rights reserved!
   ======================================================= -->
 </head>
@@ -49,7 +48,7 @@ background-color:gray;
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#hero">Kulob Service</a></h1>
+        <h1><a href="#">КӮЛОБ СЕРВИС</a></h1>
       </div>
 
       <nav id="nav-menu-container">
@@ -58,13 +57,13 @@ background-color:gray;
           <li><a href="hoteltj.html">Меҳмонхона</a></li>
           <li class="menu-active"><a href="restatj.html">Чойхона</a></li>
           <li><a href="sighttj.html">Ҷойҳои тамошобоб</a></li>
-          <li><a href="mp_company.html">MP Conpany</a></li>  
+          <li><a href="authorstj.html">Муаллифон</a></li>  
 
 
-              <li class="menu-has-children"><a href="#">Забон</a>
+              <li class="menu-has-children"><a href="#">ТҶ</a>
                 <ul>
-                  <li><a href="resta.html">English</a></li>
                   <li id="eng"><a href="#">Тоҷикӣ</a></li>
+				  <li><a href="resta.html">English</a></li>
                 </ul>
               </li>
               </ul>
@@ -90,19 +89,16 @@ background-color:gray;
         <div class="row">
 
           <div class="col-lg-12">
-            <ul id="portfolio-flters">
-              <li data-filter=" .filter-resta, .filter-coffee" class="filter-active">Ҳама</li>
-              
-            </ul>
+            
           </div>
         </div>
 
         <div class="row" id="portfolio-wrapper">
           <div class="col-lg-3 col-md-6 portfolio-item filter-resta">
-            <a href="resta1.html">
+            <a href="resta1tj.html">
               <img src="img/portfolio/resta1.jpg" alt="">
               <div class="details">
-                <h4>Istaravshan</h4>
+                <h4>Истаравшан</h4>
                 <span></span>
               </div>
             </a>
