--- a/sight.html
+++ b/sight.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kulob Service</title>
+  <title>Kulob Service - Sight</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Sight in Kulob, Kulob Service, Kulob, Kulob city, Tajikistan, Khatlon" name="keywords">
   <meta content="" name="description">
@@ -40,7 +40,6 @@ background-color:gray;
   <!-- =======================================================
     Name: Kulob Service
     URL: https://kulob-service.github.io
-    Author: MP Company & Regna
     All rights reserved!
   ======================================================= -->
 </head>
@@ -63,10 +62,10 @@ background-color:gray;
           <li><a href="hotel.html">Hotel</a></li>
           <li><a href="resta.html">Restaurant</a></li>
           <li class="menu-active"><a href="sight.html">Sight</a></li>
-          <li><a href="mp_company.html">MP Conpany</a></li>
+          <li><a href="authors.html">Authors</a></li>
 
 
-              <li class="menu-has-children"><a href="#">Language</a>
+              <li class="menu-has-children"><a href="#">ENG</a>
                 <ul>
                   <li id="eng"><a href="#">English</a></li>
                   <li><a href="sighttj.html">Тоҷикӣ</a></li>
