--- a/sighttj.html
+++ b/sighttj.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kulob Service</title>
+  <title>КӮЛОБ СЕРВИС - Ҷойҳои тамошобоб</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Sight in Kulob, Kulob Service, Kulob, Kulob city, Tajikistan, Khatlon" name="keywords">
   <meta content="" name="description">
@@ -40,7 +40,6 @@ background-color:gray;
   <!-- =======================================================
     Name: Kulob Service
     URL: https://kulob-service.github.io
-    Author: MP Company & Regna
     All rights reserved!
   ======================================================= -->
 </head>
@@ -54,7 +53,7 @@ background-color:gray;
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#">Kulob Service</a></h1>
+        <h1><a href="#">КӮЛОБ СЕРВИС</a></h1>
       </div>
 
       <nav id="nav-menu-container">
@@ -63,13 +62,13 @@ background-color:gray;
           <li><a href="hoteltj.html">Меҳмонхона</a></li>
           <li><a href="restatj.html">Чойхона</a></li>
           <li class="menu-active"><a href="sighttj.html">Ҷойҳои тамошобоб</a></li>
-          <li><a href="mp_company.html">MP Conpany</a></li>
+          <li><a href="authorstj.html">Муаллифон</a></li>
 
 
-              <li class="menu-has-children"><a href="#">Забон</a>
+              <li class="menu-has-children"><a href="#">ТҶ</a>
                 <ul>
-                  <li><a href="sight.html">English</a></li>
                   <li id="eng"><a href="#">Тоҷикӣ</a></li>
+                  <li><a href="sight.html">English</a></li>
                 </ul>
               </li>
         </ul>
@@ -87,8 +86,8 @@ background-color:gray;
         <br><br><br>
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h3 class="section-title">Sights</h3>
-          <p class="section-description">Here are most popular places.</p>
+          <h3 class="section-title">Ҷойҳои тамошобоб</h3>
+          <p class="section-description">Дар инҷо ҷойҳои машҳуртарини шаҳр оварда шудаанд.</p>
         </div>
         <div class="row">
 
@@ -102,7 +101,7 @@ background-color:gray;
             <a href="sight1.html">
               <img src="img/portfolio/sight1.jpg" alt="">
               <div class="details">
-                <h4>Mir Said Ali Hamadony's Mausaleum</h4>
+                <h4>Оромгоҳи Мир Саид Алӣ Ҳамадонӣ</h4>
                 <span></span>
               </div>
             </a>
@@ -111,8 +110,8 @@ background-color:gray;
             <a href="sight2.html">
               <img src="img/portfolio/sight2.jpg" alt="">
               <div class="details">
-                <h4>Museum</h4>
-                <span>Ismoili Somoni street, Kulob.</span>
+                <h4>Осорхона</h4>
+                <span>Кӯчаи И. Сомонӣ</span>
               </div>
             </a>
           </div>
