--- a/hotel1tj.html
+++ b/hotel1tj.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kulob Service</title>
+  <title>КӮЛОБ СЕРВИС</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="Hotel Dorro, Kulob Service, Kulob, Kulob city, Tajikistan, Khatlon" name="keywords">
+  <meta content="Меҳмонхонаи Помир, Kulob Service, Kulob, Kulob city, Tajikistan, Khatlon" name="keywords">
   <meta content="Local search tool for tourists in Kulob city." name="description">
 
   <!-- Favicons -->
@@ -44,8 +44,8 @@ background-color:silver;
 
   </style>
   <!-- =======================================================
-    Theme Name: Kulob Service
-    Theme URL: https://kulob-service.github.io
+    Name: Kulob Service
+    URL: https://kulob-service.github.io
     All rights reserved!
   ======================================================= -->
 </head>
@@ -59,26 +59,24 @@ background-color:silver;
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#">Kulob Service</a></h1>
+        <h1><a href="#">КӮЛОБ СЕРВИС</a></h1>
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a href="index.html">Home</a></li>
-          <li class="menu-active"><a href="hotel.html">Hotel</a></li>
-          <li><a href="resta.html">Restaurant</a></li>
-          <li><a href="sight.html">Sight</a></li>
-          <li><a href="authors.html">Authors</a></li>
+          <li><a href="indextj.html">Асосӣ</a></li>
+          <li class="menu-active"><a href="hoteltj.html">Меҳмонхона</a></li>
+          <li><a href="restatj.html">Чойхона</a></li>
+          <li><a href="sighttj.html">Ҷойҳои тамошобоб</a></li>
+          <li><a href="authorstj.html">Муаллифон</a></li>
 
-
-
-              <li class="menu-has-children"><a href="#">ENG</a>
+              <li class="menu-has-children"><a href="#">ТҶ</a>
                 <ul>
-                  <li id="eng"><a href="#">English</a></li>
-                  <li><a href="hotel6tj.html">Тоҷикӣ</a></li>
+                  <li id="eng"><a href="#">Тоҷикӣ</a></li>
+                  <li><a href="hotel1.html">English</a></li>
                 </ul>
               </li>
-        </ul>
+              </ul>
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
@@ -91,50 +89,41 @@ background-color:silver;
         <section id="man">
         <p id="pr">  <br>  <br><br><br> <br>  <br></p>
                           <br><br>
-          <h1 id="mname" align="center">Hotel <b>Dorro</b></h1>
-          <div align="center"><img src="img/portfolio/hotel6.jpg" border="2"></div> <br>
-          <p id="prg" align="center">Rooms are lux comfortable with all necessary conditions.</p>
+          <h1 id="mname" align="center">Меҳмонхонаи <b>Помир</b></h1>
+          <div align="center"><img src="img/portfolio/hotel1.jpg" border="2"></div> <br>
+          <p id="prg" align="center">Ҳуҷраҳо бо ҳама гуна шароити зарурӣ таъминанд.</p>
 
             <div align="center">
                 <br>
-
-                  <img src="img/551.jpg">
+                <img src="img/111.jpg">
+                <img src="img/113.jpg">
             </div>                   <br><br> <br><br>
 
                 <div align="center">
-                    <h2>Prices:</h2>
+                    <h2>Нархнома:</h2>
                     <table cellpadding="4" border="2" >
                         <tr>
-                            <td>Room for one person</td>
-                            <td align="center">200s</td>
-                            <td align="center">
-                            <img src="img/554.jpg" width="300" height="200"></td>
+                            <td>Ҳуҷра барои як нафар</td>
+                            <td>200с</td>
+                            <td><img src="img/114.jpg" width="300" height="200"></td>
                         </tr>
                         <tr>
-                            <td>Room for two persons</td>
-                            <td align="center">100s</td>
-                            <td align="center">
-                            <img src="img/553.jpg" width="300" height="200"></td>
+                            <td>Ҳуҷра барои ду нафар</td>
+                            <td>180с</td>
+                            <td><img src="img/112.jpg" width="300" height="200"></td>
                         </tr>
-                        <tr>
-                            <td>Room for two persons</td>
-                            <td align="center">100s</td>
-                            <td align="center"><img src="img/556.jpg" width="300" height="200"></td>
-                        </tr>
-
-
                         </table>
                             <br>
 
 
                         <table cellpadding="4" border="2" >
                             <tr>
-                                <td>Tell:</td>
-                                <td>+992 907-57-31-01</td>
+                                <td>Тел:</td>
+                                <td>ғоиб</td>
                             </tr>
                             <tr>
-                                <td>Address:</td>
-                                <td>Dusti street, near Central Hospital.</td>
+                                <td>Суроға:</td>
+                                <td>Маҳаллаи 1-уми Май, назди майдони варзишии марказӣ.</td>
                             </tr>
                         </table>
                 </div>
