--- a/hotel2.html
+++ b/hotel2.html
@@ -46,7 +46,6 @@ background-color:silver;
   <!-- =======================================================
     Theme Name: Kulob Service
     Theme URL: https://kulob-service.github.io
-    Author: MP Company & Regna
     All rights reserved!
   ======================================================= -->
 </head>
@@ -69,14 +68,14 @@ background-color:silver;
           <li class="menu-active"><a href="hotel.html">Hotel</a></li>
           <li><a href="resta.html">Restaurant</a></li>
           <li><a href="sight.html">Sight</a></li>
-          <li><a href="mp_company.html">MP Conpany</a></li>
+          <li><a href="authors.html">Authors</a></li>
 
 
 
-              <li class="menu-has-children"><a href="#">Language</a>
+              <li class="menu-has-children"><a href="#">ENG</a>
                 <ul>
                   <li id="eng"><a href="#">English</a></li>
-                  <li><a href="#">Тоҷикӣ</a></li>
+                  <li><a href="hotel2tj.html">Тоҷикӣ</a></li>
                 </ul>
                 </li>
         </ul>
@@ -94,7 +93,7 @@ background-color:silver;
                           <br><br>
           <h1 id="mname" align="center">Hotel <b>Makhsus</b></h1>
           <div align="center"><img src="img/portfolio/hotel2.jpg" border="2"></div> <br>
-          <p id="prg" align="center">All rooms are lux comfortable with all necessary conditions. Breakfast, supper, coffee-breaks for the seminars or other type of events may be organized, by additional payment.<br><b>WIFI is available</b></p>
+          <p id="prg" align="center">Rooms are lux comfortable with all necessary conditions. Breakfast, supper, coffee-breaks for the seminars or other type of events may be organized, by additional payment.<br><b>WIFI is available</b></p>
 
             <div align="center">
                 <br>
