--- a/indextj.html
+++ b/indextj.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kulob Service</title>
+  <title>КӮЛОБ СЕРВИС</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Kulob Service, Kulob, hotel in Kulob, Kulob city, Tajikistan" name="keywords">
   <meta content="" name="description">
@@ -31,7 +31,6 @@ background-color:silver;
   <!-- =======================================================
     Theme Name: Kulob Service
     Theme URL: https://kulob-service.github.io
-    Author: MP Company
     All rights reserved!
   ======================================================= -->
 </head>
@@ -45,7 +44,7 @@ background-color:silver;
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#hero">Kulob Service</a></h1>
+        <h1><a href="#hero">КӮЛОБ СЕРВИС</a></h1>
       </div>
 
       <nav id="nav-menu-container">
@@ -54,13 +53,13 @@ background-color:silver;
           <li><a href="hoteltj.html">Меҳмонхона</a></li>
           <li><a href="restatj.html">Чойхона</a></li>
           <li><a href="sighttj.html">Ҷойҳои тамошобоб</a></li>
-          <li><a href="mp_company.html">MP Conpany</a></li>
+          <li><a href="authors.html">Муаллифон</a></li>
 
 
-              <li class="menu-has-children"><a href="#">Забон</a>
+              <li class="menu-has-children"><a href="#">ТҶ</a>
                 <ul>
-                  <li><a href="index.html">English</a></li>
                   <li id="eng"><a href="#">Тоҷикӣ</a></li>
+                  <li><a href="index.html">English</a></li>
                 </ul>
               </li>
               </ul>
@@ -190,14 +189,14 @@ background-color:silver;
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
             <div class="box">
           <!--<div class="icon"><a href=""><i class="fa fa-paper-plane"></i></a></div>-->
-         <br> <h4 class="title"><a href="sight.html">Ҷойҳои тамошобоб</a></h4>
+         <br> <h4 class="title"><a href="sighttj.html">Ҷойҳои тамошобоб</a></h4>
              </div>
           </div>
 
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="box">
            <!--   <div class="icon"><a href=""><i class="fa fa-photo"></i></a></div>-->
-           <br>   <h4 class="title"><a href="mp_company.html">MP Company</a></h4>
+           <br>   <h4 class="title"><a href="authorstj.html">Муаллифон</a></h4>
               <!--<p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>-->
             </div>
           </div>
@@ -224,7 +223,7 @@ background-color:silver;
 
         <div class="row" id="portfolio-wrapper">
           <div class="col-lg-3 col-md-6 portfolio-item filter-hotel">
-            <a href="hotel1.html">
+            <a href="hotel1tj.html">
               <img src="img/portfolio/hotel1.jpg" alt="">
               <div class="details">
                 <h4>Меҳмонхонаи Помир</h4>
@@ -234,7 +233,7 @@ background-color:silver;
           </div>
 
            <div class="col-lg-3 col-md-6 portfolio-item filter-hotel">
-            <a href="hotel6.html">
+            <a href="hotel6tj.html">
               <img src="img/portfolio/hotel6.jpg" alt="">
               <div class="details">
                 <h4>Меҳмонхонаи Кӯлоб</h4>
@@ -244,7 +243,7 @@ background-color:silver;
           </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-resta">
-            <a href="resta1.html">
+            <a href="resta1tj.html">
               <img src="img/portfolio/resta1.jpg" alt="">
               <div class="details">
                 <h4>Истаравшан</h4>
@@ -254,7 +253,7 @@ background-color:silver;
           </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-sight">
-            <a href="sight1.html">
+            <a href="sight1tj.html">
               <img src="img/portfolio/sight1.jpg" alt="">
               <div class="details">
                 <h4>Оромгоҳи Мир Саид Алии Ҳамадонӣ</h4>
