--- a/portfoliotj.html
+++ b/portfoliotj.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kulob Service</title>
+  <title>КӮЛОБ СЕРВИС - Портфолио</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Kulob Service, Kulob, Kulob city, Tajikistan, Khatlon" name="keywords">
   <meta content="" name="description">
@@ -40,7 +40,6 @@ background-color:gray;
   <!-- =======================================================
     Name: Kulob Service
     URL: https://kulob-service.github.io
-    Author: MP Company & Regna
     All rights reserved!
   ======================================================= -->
 </head>
@@ -54,7 +53,7 @@ background-color:gray;
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#hero">Kulob Service</a></h1>
+        <h1><a href="#">КӮЛОБ СЕРВИС</a></h1>
       </div>
 
       <nav id="nav-menu-container">
@@ -63,13 +62,13 @@ background-color:gray;
           <li><a href="hoteltj.html">Меҳмонхона</a></li>
           <li><a href="restatj.html">Чойхона</a></li>
           <li><a href="sighttj.html">Ҷойҳои тамошобоб</a></li>
-          <li><a href="mp_company.html">MP Conpany</a></li>
+          <li><a href="authorstj.html">Муаллифон</a></li>
 
 
-              <li class="menu-has-children"><a href="#">Забон</a>
+              <li class="menu-has-children"><a href="#">ТҶ</a>
                 <ul>
-                  <li><a href="portfolio.html">English</a></li>
 				  <li id="eng"><a href="#">Тоҷикӣ</a></li>
+                  <li><a href="portfolio.html">English</a></li>
                 </ul>
               </li>
               </ul>
@@ -104,7 +103,7 @@ background-color:gray;
 
         <div class="row" id="portfolio-wrapper">
           <div class="col-lg-3 col-md-6 portfolio-item filter-hotel">
-            <a href="hotel1.html">
+            <a href="hotel1tj.html">
               <img src="img/portfolio/hotel1.jpg" alt="">
               <div class="details">
                 <h4>Меҳмонхонаи Помир</h4>
@@ -114,7 +113,7 @@ background-color:gray;
           </div>
 
             <div class="col-lg-3 col-md-6 portfolio-item filter-hotel">
-            <a href="hotel4.html">
+            <a href="hotel4tj.html">
               <img src="img/portfolio/hotel4.jpg" alt="">
               <div class="details">
                 <h4>Меҳмонхонаи Бобоҷон</h4>
@@ -124,7 +123,7 @@ background-color:gray;
           </div>
 
             <div class="col-lg-3 col-md-6 portfolio-item filter-hotel">
-            <a href="hotel6.html">
+            <a href="hotel6tj.html">
               <img src="img/portfolio/hotel6.jpg" alt="">
               <div class="details">
                 <h4>Меҳмонхонаи Дорро</h4>
@@ -134,7 +133,7 @@ background-color:gray;
           </div>
 
             <div class="col-lg-3 col-md-6 portfolio-item filter-hotel">
-            <a href="guest1.html">
+            <a href="guest1tj.html">
               <img src="img/portfolio/guest1.jpg" alt="">
               <div class="details">
                 <h4>Гестхаус MMK-ATAC</h4>
@@ -143,7 +142,7 @@ background-color:gray;
             </a>
           </div>
             <div class="col-lg-3 col-md-6 portfolio-item filter-hotel">
-            <a href="hotel5.html">
+            <a href="hotel5tj.html">
               <img src="img/portfolio/hotel5.jpg" alt="">
               <div class="details">
                 <h4>Меҳмонхонаи Кӯлоб</h4>
@@ -153,7 +152,7 @@ background-color:gray;
           </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-resta">
-            <a href="resta1.html">
+            <a href="resta1tj.html">
               <img src="img/portfolio/resta1.jpg" alt="">
               <div class="details">
                 <h4>Истаравшан</h4>
@@ -163,7 +162,7 @@ background-color:gray;
           </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-sight">
-            <a href="sight1.html">
+            <a href="sight1tj.html">
               <img src="img/portfolio/sight1.jpg" alt="">
               <div class="details">
                 <h4>Оромгоҳи Мир Саид Алии Ҳамадонӣ</h4>
@@ -173,30 +172,30 @@ background-color:gray;
           </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-hotel">
-            <a href="hotel2.html">
+            <a href="hotel2tj.html">
               <img src="img/portfolio/hotel2.jpg" alt="">
               <div class="details">
                 <h4>Меҳмонхонаи Махсус</h4>
-                <span>Кӯчаи Борбад, Кӯлоб.</span>
+                <span>Кӯчаи Борбад</span>
               </div>
             </a>
           </div>
 
          <div class="col-lg-3 col-md-6 portfolio-item filter-hotel">
-            <a href="hotel3.html">
+            <a href="hotel3tj.html">
               <img src="img/portfolio/hotel3.jpg" alt="">
               <div class="details">
                 <h4>Меҳмонхонаи Хатлон</h4>
-                <span>Кӯчаи И. Сомонӣ, Кӯлоб.</span>
+                <span>Кӯчаи И. Сомонӣ</span>
               </div>
             </a>
           </div>
           <div class="col-lg-3 col-md-6 portfolio-item filter-sight">
-            <a href="sight2.html">
+            <a href="sight2tj.html">
               <img src="img/portfolio/sight2.jpg" alt="">
               <div class="details">
-                <h4>Museum</h4>
-                <span>Ismoili Somoni street, Kulob.</span>
+                <h4>Осорхона</h4>
+                <span>Кӯчаи И. Сомонӣ</span>
               </div>
             </a>
           </div>
