--- a/resta.html
+++ b/resta.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kulob Service</title>
+  <title>Kulob Service - Restaurants</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="restaurant in kulob, Kulob Service, Kulob, Kulob city, Tajikistan, Khatlon" name="keywords">
   <meta content="" name="description">
@@ -35,7 +35,6 @@ background-color:gray;
   <!-- =======================================================
     Name: Kulob Service
     URL: https://kulob-service.github.io
-    Author: MP Company & Regna
     All rights reserved!
   ======================================================= -->
 </head>
@@ -49,7 +48,7 @@ background-color:gray;
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#hero">Kulob Service</a></h1>
+        <h1><a href="#">Kulob Service</a></h1>
       </div>
 
       <nav id="nav-menu-container">
@@ -58,10 +57,10 @@ background-color:gray;
           <li><a href="hotel.html">Hotel</a></li>
           <li class="menu-active"><a href="resta.html">Restaurant</a></li>
           <li><a href="sight.html">Sight</a></li>
-          <li><a href="mp_company.html">MP Conpany</a></li>  
+          <li><a href="authors.html">Authors</a></li>  
 
 
-              <li class="menu-has-children"><a href="#">Language</a>
+              <li class="menu-has-children"><a href="#">ENG</a>
                 <ul>
                   <li id="eng"><a href="#">English</a></li>
                   <li><a href="restatj.html">Тоҷикӣ</a></li>
