--- a/sight1.html
+++ b/sight1.html
@@ -46,7 +46,6 @@ background-color:silver;
   <!-- =======================================================
     Theme Name: Kulob Service
     Theme URL: https://kulob-service.github.io
-    Author: MP Company & Regna
     All rights reserved!
   ======================================================= -->
 </head>
@@ -65,18 +64,18 @@ background-color:silver;
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a href="#hero">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="hotel.html">Hotel</a></li>
           <li><a href="resta.html">Restaurant</a></li>
           <li class="menu-active"><a href="sight.html">Sight</a></li>
-          <li><a href="mp_company.html">MP Conpany</a></li>
+          <li><a href="authors.html">Authors</a></li>
 
 
 
-              <li class="menu-has-children"><a href="#">Language</a>
+              <li class="menu-has-children"><a href="#">ENG</a>
                 <ul>
                   <li id="eng"><a href="#">English</a></li>
-                  <li><a href="#">Тоҷикӣ</a></li>
+                  <li><a href="sight1tj.html">Тоҷикӣ</a></li>
                 </ul>
               </li>
         </ul>
