--- a/sight1tj.html
+++ b/sight1tj.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kulob Service</title>
+  <title>КӮЛОБ СЕРВИС</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="Hotel Dorro, Kulob Service, Kulob, Kulob city, Tajikistan, Khatlon" name="keywords">
+  <meta content="Оромгоҳи Ҳамадонӣ, Kulob Service, Kulob, Kulob city, Tajikistan, Khatlon" name="keywords">
   <meta content="Local search tool for tourists in Kulob city." name="description">
 
   <!-- Favicons -->
@@ -59,26 +59,24 @@ background-color:silver;
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#">Kulob Service</a></h1>
+        <h1><a href="#">КӮЛОБ СЕРВИС</a></h1>
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a href="index.html">Home</a></li>
-          <li class="menu-active"><a href="hotel.html">Hotel</a></li>
-          <li><a href="resta.html">Restaurant</a></li>
-          <li><a href="sight.html">Sight</a></li>
-          <li><a href="authors.html">Authors</a></li>
+          <li><a href="indextj.html">Асосӣ</a></li>
+          <li><a href="hoteltj.html">Меҳмонхона</a></li>
+          <li><a href="restatj.html">Чойхона</a></li>
+          <li class="menu-active"><a href="sighttj.html">Ҷойҳои тамошобоб</a></li>
+          <li><a href="authorstj.html">Муаллифон</a></li>
 
-
-
-              <li class="menu-has-children"><a href="#">ENG</a>
+              <li class="menu-has-children"><a href="#">ТҶ</a>
                 <ul>
-                  <li id="eng"><a href="#">English</a></li>
-                  <li><a href="hotel6tj.html">Тоҷикӣ</a></li>
+                  <li id="eng"><a href="#">Тоҷикӣ</a></li>
+                  <li><a href="sight1.html">English</a></li>
                 </ul>
               </li>
-        </ul>
+              </ul>
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
@@ -91,50 +89,30 @@ background-color:silver;
         <section id="man">
         <p id="pr">  <br>  <br><br><br> <br>  <br></p>
                           <br><br>
-          <h1 id="mname" align="center">Hotel <b>Dorro</b></h1>
-          <div align="center"><img src="img/portfolio/hotel6.jpg" border="2"></div> <br>
-          <p id="prg" align="center">Rooms are lux comfortable with all necessary conditions.</p>
+          <h1 id="mname" align="center">Оромгоҳи <b>Мир Саид Алӣ Ҳамадонӣ</b></h1>
+          <div align="center"><img src="img/portfolio/sight1.jpg" border="2"></div> <br>
+          <p id="prg" align="center">Агар шумо ба шаҳри бостонии Кӯлоб омадед, шумо бояд ба ин макон ҳозир шавед. Оромгоҳ дар боғи фароғатии марказӣ ҷойгир аст. Дар назди оромгоҳ осорхонаи ин марди бузург низ вуҷуд дорад.</p>
 
-            <div align="center">
-                <br>
-
-                  <img src="img/551.jpg">
-            </div>                   <br><br> <br><br>
+                               <br><br> <br><br>
 
                 <div align="center">
-                    <h2>Prices:</h2>
+                    <h2>Pictures:</h2>
                     <table cellpadding="4" border="2" >
                         <tr>
-                            <td>Room for one person</td>
-                            <td align="center">200s</td>
-                            <td align="center">
-                            <img src="img/554.jpg" width="300" height="200"></td>
-                        </tr>
-                        <tr>
-                            <td>Room for two persons</td>
-                            <td align="center">100s</td>
-                            <td align="center">
-                            <img src="img/553.jpg" width="300" height="200"></td>
-                        </tr>
-                        <tr>
-                            <td>Room for two persons</td>
-                            <td align="center">100s</td>
-                            <td align="center"><img src="img/556.jpg" width="300" height="200"></td>
-                        </tr>
+                            <td align="center"><img src="img/6.jpg" ></td>
 
+                            <td align="center"><img src="img/4.jpg" ></td>
+                        </tr>
 
                         </table>
                             <br>
 
 
                         <table cellpadding="4" border="2" >
+
                             <tr>
-                                <td>Tell:</td>
-                                <td>+992 907-57-31-01</td>
-                            </tr>
-                            <tr>
-                                <td>Address:</td>
-                                <td>Dusti street, near Central Hospital.</td>
+                                <td>Суроға:</td>
+                                <td>Боғи марказӣ</td>
                             </tr>
                         </table>
                 </div>
