--- a/authorstj.html
+++ b/authorstj.html
@@ -102,8 +102,8 @@ background-color:silver;
         <article align="center">
             <p>
 			Ҳамаи хизматрасониҳо дар ВЕБСАЙТ ройгон мебошанд. Мо кӯшиш мекунем, ки хабарҳои ҳозиршударо дар муддати кӯтоҳ аз сари нав чоп кунем.<br>
-			Ин шабака аз тарафи хонандагони муассисаи таълимии "Литсей барои хонандагони болаёқат" дар ш. Бохтар - <b>Ҳамдамов Бобомурод</b>, <b>Раҷабализода Бобоҷон</b><br> ва <b>Шарипов Собир</b> сохта шудааст.
-			Мо дастаи рафиқона ҳастем ва барои пешрафти соҳаи сайёҳӣ дар кишравамон кор мекунем.
+			Ин шабака аз тарафи хонандаи муассисаи таълимии "Литсей барои хонандагони болаёқат" дар ш. Бохтар - <b>Алимов Камолиддин</b> сохта шудааст.
+			<br>Мо дастаи рафиқона ҳастем ва барои пешрафти соҳаи сайёҳӣ дар кишравамон кор мекунем.
 			</p>
 			
 		</article>
@@ -126,7 +126,7 @@ background-color:silver;
                 <td><i class="fa fa-envelope"></i> <h4>Почтаи Электронӣ:</h4></td>
                 </tr>
                 <tr>
-                <td><h5>+992 918 93 08 52<br>+992 884 40 10 21</h5></td><td></td>
+                <td><h5>+992 884 40 10 21</h5></td><td></td>
                 <td><h5>kulob-service@mail.ru</h5></td>
                 </tr>
                 </table>
