--- a/authors.html
+++ b/authors.html
@@ -101,8 +101,8 @@ background-color:silver;
         
         <article align="center">
             <p>All services in the website is free.  We will update information and add new ones as soon as we can.<br>
-             The website belongs to <b>Hamdamov Bobomurod</b>,<b>Rajabalizoda Bobojon</b> and <b>Sharipov Sobir</b> - students<br>
-            of "<b>Lyceum for gifted students</b>" in <b>Bokhtar city</b>. We are a friendly team. We work purely for the progression of country tourism sphere.</p>
+             The website belongs to <b>Alimov Kamoliddin</b> - student
+            of "<b>Lyceum for gifted students</b>" in Bokhtar city.<br> We are a friendly team. We work purely for the progression of country tourism sphere.</p>
 
 		</article>
                <br>
@@ -123,7 +123,7 @@ background-color:silver;
                 <td><h4><i class="fa fa-envelope"></i>E-mail:</h4></td>
                 </tr>
                 <tr>
-                <td><h5>+992 918 93 08 52<br>+992 884 40 10 21</h5></td><td></td>
+                <td><h5>+992 884 40 10 21</h5></td><td></td>
                 <td><h5>kulob-service@mail.ru</h5></td>
                 </tr>
                 </table>
